--- a/Atos.Web.Mobile.Trends/default.html
+++ b/Atos.Web.Mobile.Trends/default.html
@@ -15,7 +15,7 @@
         <article data-role="content" data-theme="d">
             <div data-role="fieldcontain">
                 <fieldset data-role="controlgroup" id="ListOfAnswers">
-    	            <legend class="question"></legend>
+    	            <legend class="question" style="display:block;></legend>
          	        <!--<input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" /><label for="radio-choice-1">Cloud</label>
 
          	        <input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2"  />
@@ -83,7 +83,7 @@
                  success: function (data) {
                      $('.question').html(data[0].Question.Description.toString());
                      $(data).each(function (data) { $('#ListOfAnswers').append('<input type="radio" name="radio-choice-1" id="radio-choice-' + this.Id + '" value="' + this.Id + '" /><label for="radio-choice-' + this.Id + '">' + this.Description + '</label>'); });
-
+                     $('#vote').refresh();
                  },
                  //in case of any error fire this call back function
                  error: function (req, status, error) {
@@ -94,7 +94,7 @@
                      // As you can see I use jQuery chaining to also define the 2 css attributes for the div to set it visible and with a background color
                      alert('The request ' + req.toString() + ' went wrong: ' + status.toString());
                      $('.ErrorSummary').text('The request ' + req.toString() + ' went wrong: ' + status.toString() + ' ' + error.toString()).css('display', 'block').css('background', '#C00'); ;
-                     $('#vote').refresh();
+                     //$('#vote').refresh();
                  }
              });
          }
