damn typo messing up style attr

--- a/Atos.Web.Mobile.Trends/default.html
+++ b/Atos.Web.Mobile.Trends/default.html
@@ -15,7 +15,7 @@
         <article data-role="content" data-theme="d">
             <div data-role="fieldcontain">
                 <fieldset data-role="controlgroup" id="ListOfAnswers">
-    	            <legend class="question" style="display:block;></legend>
+    	            <legend class="question" style="display:block;"></legend>
          	        <!--<input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" /><label for="radio-choice-1">Cloud</label>
 
          	        <input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2"  />
