data-position for legend element

--- a/Atos.Web.Mobile.Trends/default.html
+++ b/Atos.Web.Mobile.Trends/default.html
@@ -15,25 +15,15 @@
         <article data-role="content" data-theme="d">
             <div data-role="fieldcontain">
                 <fieldset data-role="controlgroup" id="ListOfAnswers">
-    	            <legend class="question" style="display:block;"></legend>
-         	        <!--<input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" /><label for="radio-choice-1">Cloud</label>
-
-         	        <input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2"  />
-         	        <label for="radio-choice-2">SOA</label>
-
-         	        <input type="radio" name="radio-choice-1" id="radio-choice-3" value="choice-3"  />
-         	        <label for="radio-choice-3">Mobile devices</label>
-
-         	        <input type="radio" name="radio-choice-1" id="radio-choice-4" value="choice-4"  />
-         	        <label for="radio-choice-4">BPM</label>-->
-                    <span class="ErrorSummary"></span>
+    	            <legend class="question" data-position="fixed"></legend>
+         	        <span class="ErrorSummary"></span>
                 </fieldset>
             </div>
             <div data-role="fieldcontain">
                 <fieldset data-role="controlgroup" class="ui-grid-b">
                     <legend></legend>
                     <a href="#results" data-role="button" data-theme="b" id="castyourvote">Stem</a>
-                    <!--<button type="submit" data-theme="b">Stem</button>-->
+                    
                 </fieldset>
             </div>
         </article>
