--- a/Atos.Web.Mobile.Trends/default.html
+++ b/Atos.Web.Mobile.Trends/default.html
@@ -72,9 +72,9 @@
                  dataType: "json",
                  // in case of success fire this call back function (remember Ajax is a sync, so set up your call back function to handle the response once you get it.
                  success: function (data) {
-                     alert(data[0].Question.Description.toString());
+                     
                      $('#ListOfAnswers').append('<legend class="question">' + data[0].Question.Description.toString() +'</legend>');
-                     $(data).each(function (data) { $('#ListOfAnswers').append('<input type="radio" name="radio-choice-1" id="radio-choice-' + this.Id + '" value="' + this.Id + '" /><label for="radio-choice-' + this.Id + '">' + this.Description + '</label>'); });
+                     $(data).each(function (data) { $('#ListOfAnswers').append('<input type="radio" name="radio-choice-1" id="radio-choice-' + this.Id + '" value="' + this.Id + '" />\n<label for="radio-choice-' + this.Id + '">' + this.Description + '</label>\n'); });
                      $('#ListOfAnswers').trigger('create');
                      //$('#vote').refresh();
                  },
