atos logo in header

--- a/Atos.Web.Mobile.Trends/default.html
+++ b/Atos.Web.Mobile.Trends/default.html
@@ -11,7 +11,7 @@
     </head>
     <body>
     <div data-role="page" id="vote">
-        <header data-role="header" data-theme="b"><h1>Geef uw mening</h1></header>
+        <header data-role="header" data-theme="b"><h1><img src="content/atos.png" alt="Atos" title="Atos" /></h1></header>
         <article data-role="content" data-theme="d">
             <div data-role="fieldcontain">
                 <fieldset data-role="controlgroup" id="ListOfAnswers">
