--- a/Atos.Web.Mobile.Trends/default.html
+++ b/Atos.Web.Mobile.Trends/default.html
@@ -102,8 +102,36 @@
              });
          }
 
+         function GetAnswers() {
+             $.ajax({
+                 //HTTP request type
+                 type: "POST",
+                 //URI endpoint to call
+                 url: "/Answers/GetAnswers/",
+                 contentType: 'application/json; charset=utf-8',
+                 data: "{ questionId: 1 }",
+                 //type of data structure we want to get back
+                 dataType: "json",
+                 // in case of success fire this call back function (remember Ajax is a sync, so set up your call back function to handle the response once you get it.
+                 success: function (data) {
+                     //$('.question').html(data[0].Question.Description.toString());
+                     var totalVotes = 0;
+                     $('#resultlist').append('<li data-theme="b" data-role="divider">Trends populariteit</li>');
+                     $(data).each(function (data) { $('#resultlist').append('<li data-theme="d">' + this.Description + '<span class="ui-li-count">' + this.NumberOfChosenAsAnswer + '</span></li>'); totalVotes = totalVotes + this.NumberOfChosenAsAnswer; });
+                     $('#resultlist').append('<li data-theme="a">Totaal aantal stemmen<span class="ui-li-count">' + totalVotes.toString() + '</span></li>');
+                     $('#resultlist').listview('refresh');
+                 },
+                 //in case of any error fire this call back function
+                 error: function (req, status, error) {
+
+                     $('.ErrorSummary').text('The request ' + req.toString() + ' went wrong: ' + status.toString() + ' ' + error.toString()).css('display', 'block').css('background', '#C00'); ;
+                 }
+             });
+         }
+
          $(document).ready(function () {
              GetQuestion();
+             GetAnswers();
          });
 
          $('#castyourvote').click(function() {
